fix: body overflow

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,6 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   font-family: helvetica;
-  overflow-x: hidden;
 }
 
 /* A elements that don't have a class get default styles */
